--- a/homework/src/app/admin/center1/center1.component.html
+++ b/homework/src/app/admin/center1/center1.component.html
@@ -1,6 +1,122 @@
+<!--<div class="centercontent">-->
+<br>
+  <div class="pageheader">
+    <h1 class="pagetitle">添加教师用户</h1>
+
+  </div><!--pageheader-->
+<br>
+
+      <form class="stdform stdform2" >
+        <p>
+          <label>工号</label>
+          <span class="field"><input type="text" name="age"  class="longinput" /></span>
+        </p>
+        <p>
+          <label>姓名</label>
+          <span class="field"><input type="text" name="firstname" id="firstname2" class="longinput" /></span>
+        </p>
+
+        <p>
+          <label>年龄</label>
+          <span class="field"><input type="text" name="lastname" id="lastname2" class="longinput" /></span>
+        </p>
+
+        <p>
+          <label>性别</label>
+                            <span class="field">
+                            	<input type="radio" name="radiofield" /> 男 &nbsp; &nbsp;
+                            	<input type="radio" name="radiofield" checked="checked" /> 女 &nbsp; &nbsp;
+                            </span>
+        </p>
+
+
+        <p>
+          <label>职称</label>
+                            <span class="field">
+                            	<input type="radio" name="radiofield1" checked="checked"/> 讲师 &nbsp; &nbsp;
+                            	<input type="radio" name="radiofield1"  /> 副教授 &nbsp; &nbsp;
+                              <input type="radio" name="radiofield1" /> 教授  &nbsp; &nbsp;
+                              <input type="radio" name="radiofield1"  /> 助教
+                            </span>
+        </p>
+
+        <p>
+          <label>邮箱</label>
+          <span class="field"><input type="text" name="email" id="email2" class="longinput" /></span>
+        </p>
+
+        <p>
+          <label>住址 <small>家庭住址</small></label>
+          <span class="field"><textarea cols="80" rows="5" name="location" id="location2" class="longinput"></textarea></span>
+        </p>
+
+        <p class="stdformbutton">
+          <button class="submit radius2">提交</button>
+          <input type="reset" class="reset radius2" value="重置" />
+        </p>
+      </form>
+
+      <br />
+
+<!--=======================-->
 <div class="centercontent">
-  <p>
-    center1 works!
-  </p>
-</div>
+
+  <div id="inbox" class="subcontent">
+    <div class="pageheader" id="div1">
+      <h1 class="pagetitle">删除教师用户</h1>
+
+    </div><!--pageheader-->
+    <br>
+
+
+    <div class="sele">
+
+      工号查询：<input type="text"/><input type="button" value="查询"/><br/>
+    </div><!--contenttitle-->
+    <br>
+
+    <table cellpadding="0" cellspacing="0" border="0" class="stdtable mailinbox">
+      <colgroup>
+        <col class="con1" width="10%"/>
+        <!--<col class="con0" width="4%" />-->
+        <col class="con1" width="20%"/>
+        <col class="con0" width="20%"/>
+        <col class="con1" width="30%"/>
+        <col class="con1" width="10%"/>
+        <col class="con1" width="10%"/>
+
+      </colgroup>
+      <thead>
+      <tr>
+        <th width="20" class="head1 aligncenter"><input type="checkbox" name="checkall" class="checkall" /></th>
+        <!--<th class="head0">&nbsp;</th>-->
+        <th class="head1">工号</th>
+        <th class="head0">姓名</th>
+        <!--<th class="head1 attachement">&nbsp;</th>-->
+        <th class="head0">职称</th>
+        <th class="head0">删除</th>
+      </tr>
+      </thead>
+      <!--删除教师的具体信息-->
+      <tfoot>
+      <th width="20" class="head1 aligncenter"><input type="checkbox" name="checkall" class="checkall" /></th>
+      <!--<th class="head0">&nbsp;</th>-->
+      <th class="head1"></th>
+      <th class="head0"></th>
+      <!--<th class="head1 attachement">&nbsp;</th>-->
+      <th class="head0"></th>
+      <th class="head0"><input type="button" value="删除"/></th>
+
+      </tfoot>
+
+    </table>
+  </div>
+
+
+  </div><!--contentwrapper-->
+
+
+<br><br><br><br>
+
+
 
