--- a/homework/src/app/admin/header/header.component.html
+++ b/homework/src/app/admin/header/header.component.html
@@ -22,7 +22,7 @@
   <ul class="headermenu">
     <!--3、在需要连接的地方用[routerLink]="['/person']"标记路由-->
     <li><a [routerLink]="['/left1']"><span class="icon icon-flatscreen"></span>1</a></li>
-    <li><a [routerLink]="['/left2']"><span class="icon icon-message"></span>2</a></li>
+    <li><a [routerLink]="['/left2']"><span class="icon icon-message"></span>管理教师用户</a></li>
     <li><a [routerLink]="['/left3']" ><span class="icon icon-pencil"></span>3</a></li>
 
   </ul>
