--- a/homework/src/app/admin/left1/left1.component.html
+++ b/homework/src/app/admin/left1/left1.component.html
@@ -2,7 +2,7 @@
   <div class="vernav2 iconmenu">
     <ul>
       <!--陪在2下-->
-      <li><a [routerLink]="['/center1']" class="elements">1</a></li>
+      <li><a  class="elements">1</a></li>
       <li><a href="#" class="elements">2</a></li>
 
 
@@ -12,10 +12,6 @@
     <br /><br />
   </div>
 
-  <div class="centercontent">
-    <p>
-      你是什么鬼东西
-    </p>
-  </div>
+
 
 </div><!--leftmenu-->
