--- a/homework/src/app/admin/left2/left2.component.html
+++ b/homework/src/app/admin/left2/left2.component.html
@@ -1,11 +1,15 @@
 <div class="vernav2 iconmenu">
   <ul>
     <!--陪在2下-->
-    <li><a href="#" class="elements">1</a></li>
-    <li><a href="#" class="elements">2</a></li>
-    <li><a href="#" class="elements">3</a></li>
+    <li><a href="#div1" class="elements">添加教师用户</a></li>
+    <li><a href="#" class="elements">删除教师用户</a></li>
 
   </ul>
-  <a class="togglemenu"></a>
-  <br /><br />
-</div><!--leftmenu-->
+
+
+</div>
+<app-center1></app-center1>
+<!--<app-deleteacher></app-deleteacher>-->
+
+
+
