--- a/homework/src/app/admin/header/header.component.html
+++ b/homework/src/app/admin/header/header.component.html
@@ -25,6 +25,15 @@
     <li><a [routerLink]="['/left2']"><span class="icon icon-message"></span>管理教师用户</a></li>
     <li><a [routerLink]="['/left3']" ><span class="icon icon-pencil"></span>3</a></li>
 
+
+    <!--<li><a href="#"><span class="icon icon-flatscreen"></span>1</a></li>-->
+    <!--<li><a href="#"><span class="icon icon-message"></span>管理教师用户</a>-->
+      <!--<ul><a href="#">添加教师</a></ul>-->
+      <!--<ul><a href="#">删除教师</a></ul>-->
+      <!--<ul><a href="#">删除教师</a></ul>-->
+    <!--</li>-->
+    <li><a [routerLink]="['/left3']" ><span class="icon icon-pencil"></span>3</a></li>
+
   </ul>
 
 </div><!--header-->
