--- a/homework/src/app/admin/left1/left1.component.css
+++ b/homework/src/app/admin/left1/left1.component.css
@@ -1,4 +1,4 @@
-.vernav { width: 230px; position: absolute; left: 0; top: 160px; }
+.vernav { width: 100%; position: absolute; left: 0; top: 160px; }
 .vernav ul { list-style: none; margin: 10px; }
 .vernav ul li { display: block; margin-bottom: 1px; position: relative; }
 .vernav ul li a {
